# openai-realtime-embedded-sdk

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  display_handler.c  display_handler.h  idf_component.yml  main.cpp  media.cpp  pixeboy_20.h  pixeboy_32.h  pixeboy_60.c  time_mgmt.c  time_mgmt.h  wifi.cpp
